--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Falling ball </title>
     <link rel="stylesheet" href="style.css">
+    <script src="./formSubmit.js"></script>
 </head>
 
 <body>
@@ -16,6 +17,35 @@
         <p>Position: &lt; X-axis: <span id="posX"></span>&comma; Y-axis: <span id="posY"></span> &gt;</p>
         <p>Speed: &lt; X-axis: <span id="speedX"></span>&comma; Y-axis: <span id="speedY"></span> &gt;</p>
         <p>Acceleration: &lt; X-axis: <span id="accX"></span>&comma; Y-axis: <span id="accY"></span> &gt;</p>
+        <form action="#" onsubmit="formSubmit();">
+            <ul>
+                <li>
+                    <p>Enter initial position on X-Y plane </p>
+                    <label for="posX">X-axis</label>
+                    <input type="number" name="posX" id="in-posX" max="800" min="0" />
+                    <label for="posY">Y-axis</label>
+                    <input type="number" name="posY" id="in-posY" max="500" min="0" />
+                </li>
+                <li>
+                    <p>Enter initial Velocities on X-Y plane </p>
+                    <label for="velX">X-axis</label>
+                    <input type="number" name="velX" id="in-velX">
+                    <label for="velY">Y-axis</label>
+                    <input type="number" name="velY" id="in-velY">
+                </li>
+                <li>
+                    <p>Enter acceleration on X-Y plane </p>
+                    <label for="accX">X-axis</label>
+                    <input type="number" name="accX" id="in-accX">
+                    <label for="accY">Y-axis</label>
+                    <input type="number" name="accY" id="in-accY">
+                </li>
+            </ul>
+            <button type="submit">Reset</button>
+            <button id="stop" onclick="stopCycle();" type="button">Stop</button>
+            <button id="start" onclick="startCycle();" type="button" disabled>Start</button>
+
+        </form>
     </div>
     <script src="script.js"></script>
 </body>
